--- a/index.html
+++ b/index.html
@@ -1,46 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Document</title>
 </head>
+
 <body>
     <div class="container">
-    <form>
-        <div class="form-group">
-          <label for="exampleFormControlInput1">Search Term</label>
-          <input type="email" class="form-control" id="exampleFormControlInput1">
+        <div id="banner">
+            <h4>Search Parameters</h4>
         </div>
-        <div class="form-group">
-          <label for="exampleFormControlSelect1">Number of Records to Retrive:</label>
-          <select class="form-control" id="exampleFormControlSelect1">
-            <option>1</option>
-            <option>2</option>
-            <option>3</option>
-            <option>4</option>
-            <option>5</option>
-            <option>6</option>
-            <option>7</option>
-            <option>8</option>
-            <option>9</option>
-            <option>10</option>
-          </select>
-        </div>
-        <div class="form-group">
-          <label for="exampleFormControlSelect2">Start Year(Optional):</label>
-          <input class="form-control" id="exampleFormControlInput1">
-        </div>
-        <div class="form-group">
-            <label for="exampleFormControlSelect2">End Year(Optional):</label>
-            <input class="form-control" id="exampleFormControlInput1">
-        </div>
-        <button type="button" class="btn btn-secondary">Search</button>
-        <button type="button" class="btn btn-secondary">Clear Results</button>
-      </form>
+        <form>
+            <div class="form-group">
+                <label for="exampleFormControlInput1">Search Term</label>
+                <input data-search="" type="text" class="form-control" id="searchTerm">
+            </div>
+            <div class="form-group">
+                <label for="exampleFormControlSelect1">Number of Records to Retrive:</label>
+                <select class="form-control" id="exampleFormControlSelect1">
+                    <option>1</option>
+                    <option>2</option>
+                    <option>3</option>
+                    <option>4</option>
+                    <option>5</option>
+                    <option>6</option>
+                    <option>7</option>
+                    <option>8</option>
+                    <option>9</option>
+                    <option>10</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="exampleFormControlSelect2">Start Year(Optional):</label>
+                <input class="form-control" id="startYear">
+            </div>
+            <div class="form-group">
+                <label for="exampleFormControlSelect2">End Year(Optional):</label>
+                <input type="text" class="form-control" id="endYear">
+            </div>
+            <button id="submitSearch" type="button" class="btn btn-secondary">Search</button>
+            <button id="clearSearch" type="button" class="btn btn-secondary">Clear Results</button>
+        </form>
     </div>
+    <script src="./assets/javascript/javascript.js"></script>
 </body>
+
 </html>
