--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <label for="exampleFormControlSelect2">End Year(Optional):</label>
                 <input type="text" class="form-control" id="endYear">
             </div>
-            <button id="submitSearch" type="button" class="btn btn-secondary">Search</button>
+            <button onclick="fn1()" id="submitSearch" type="button" class="btn btn-secondary">Search</button>
             <button id="clearSearch" type="button" class="btn btn-secondary">Clear Results</button>
         </form>
     </div>
